# qcit_CmakeLearning

./: CMakeLists.txt  README.md
0724/: CMakeLists.txt
0724/src/: CMakeLists.txt  hello.cpp
0724/src_bin/: CMakeLists.txt  usehello.cpp
0726/: CMakeLists.txt
0726/include/: hello.h
0726/src_bin/: CMakeLists.txt
src_bin/: CMakeLists.txt
